@@ -1,3 +1,9 @@
+2003-05-02  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/Makefile.am (CLEANFILES): Remove PCH files in target
+	directory.
+	* include/Makefile.in: Regenerate.
+
 2003-05-02  Paolo Carlini  <pcarlini@unitus.it>
 
 	* include/std/std_sstream.h (str()): Tidy.
